# gitlab_ci_generator

./: .gitignore  README.md  pyproject.toml  tasks.py
gitlab_ci_generator/: __main__.py  gitlab_variables.py  log_util.py  yaml_utils.py
tests/: test_gitlab_variables.py  test_yaml_utils.py
