[tool.poetry]
name = "gitlab_ci_generator"
version = "0.1.0"
description = ""
authors = ["Charandeep Matta <charandeep.matta@gmail.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.13"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
invoke = "^2.2.0"
isort = "^5.13.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-html = "^4.1.1"
pytest-cov = "^6.0.0"

[tool.poetry.scripts]
gitlab_ci_generator = "gitlab_ci_generator.__main__:main"

[tool.pytest.ini_options]
addopts = """
    -v
    -s
    --html=report/report.html
    --cov=gitlab_ci_generator --cov-report html --cov-report term
"""
# log_cli : pytest will output logging records as they are emitted directly into the console.
# Otherwise, the log is printed to console only if the test fails.
# log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

log_file = "pytest.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 120
